--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "populate": "node --experimental-json-modules database/populate.js",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
